# AirInterface-ROS

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
airinterface-ros/: .gitignore  package.xml  requirements.txt
airinterface-ros/launch/: drone_sim.launch
airinterface-ros/params/: drone_arm.params
airinterface-ros/scripts/: arm_translator.py  drone_unity.py  keyboard_pose.py
airinterface-ros/srv/: UnitySetState.srv
launch/: drone_arm.launch  drone_sim.launch
params/: drone_arm_new_fw.params
scripts/: drone.py  drone_test.py  drone_unity.py  mocap2ros.py
src/drone/: __init__.py
srv/: UnityGetState.srv
