<?xml version="1.0"?>
<package format="2">
  <name>airinterface</name>
  <version>0.1.0</version>
  <description>The airinterface ROS package</description>

  <maintainer email="nikita.mikhailovskiy@skoltech.ru">Nikita Mikhailovskiy</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/CityAplons/AirInterface-ROS</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python-pymavlink</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
